--- a/docker-compose.override.yml
+++ b/docker-compose.override.yml
@@ -1,17 +1,13 @@
 version: '3.4'
 
 services:
-  webapplication:
+  dotnetwebapplication:
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - ASPNETCORE_URLS=https://+:443;http://+:80
     ports:
-      - "59072:80"
-      - "44356:443"
+      - "80"
+      - "443"
     volumes:
-      - ${APPDATA}/Microsoft/UserSecrets:C:\Users\ContainerUser\AppData\Roaming\Microsoft\UserSecrets:ro
-      - ${APPDATA}/ASP.NET/Https:C:\Users\ContainerUser\AppData\Roaming\ASP.NET\Https:ro
-networks:
-  default:
-    external:
-      name: nat
+      - ${APPDATA}/Microsoft/UserSecrets:/root/.microsoft/usersecrets:ro
+      - ${APPDATA}/ASP.NET/Https:/root/.aspnet/https:ro
