--- a/src/DotnetWebapplication/DotnetWebapplication.csproj
+++ b/src/DotnetWebapplication/DotnetWebapplication.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.17.2" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DotnetWebaplication.Abstractions\DotnetWebaplication.Abstractions.csproj" />
+    <ProjectReference Include="..\DotnetWebaplication.Entities\DotnetWebaplication.Entities.csproj" />
+    <ProjectReference Include="..\DotnetWebapplication.Infrastructure\DotnetWebapplication.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
