--- a/.github/workflows/qa-approved.yml
+++ b/.github/workflows/qa-approved.yml
@@ -1,20 +1,10 @@
-name: Do Not Merge
+name: QA Approved
 
 on:
   pull_request:
     types: [synchronize, opened, reopened, labeled, unlabeled]
 
 jobs:
-  do-not-merge:
-    if: ${{ contains(github.event.*.labels.*.name, 'do not merge') }}
-    name: Prevent Merging
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check for label
-        run: |
-          echo "Pull request is labeled as 'do not merge'"
-          echo "This workflow fails so that the pull request cannot be merged"
-          exit 1
   qa-approved:
     if: ${{ !contains(github.event.*.labels.*.name, 'qa approved') }}
     name: Merge when QA approved
